[package]
name = "dnlib"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "1.0"
walkdir = "2.3"
lazy_static = "1.4"
rayon = "1.5"
regex = "1"
unicase = "2.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "0.3"
strum = "0.15"
strum_macros = "0.15"
smart-default = "0.5"
git2 = "0.8"
chrono = "0.4"
petgraph = "0.4"
fixedbitset = "0.1.9"
bitflags = "1.0"
log = "0.4"
logging_timer = "0.2"

[dev-dependencies]
tempfile = "3.0"
