[package]
name = "dnlib"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "3.0"
walkdir = "2.3"
lazy_static = "1.4"
rayon = "1.5"
regex = "1"
unicase = "2.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1"
strum = "0.21"
strum_macros = "0.21"
smart-default = "0.6"
git2 = "0.13"
chrono = "0.4"
petgraph = "0.6"
fixedbitset = "0.4"
bitflags = "1.3"
log = "0.4"
logging_timer = "1"

[dev-dependencies]
tempfile = "3.2"
