[package]
name = "dnscan"
version = "0.1.0"
authors = ["Philip Daniels <Philip.Daniels1971@gmail.com>"]
edition = "2018"

[dependencies]
dnlib = { path = "../dnlib" }
csv = "1.0.5"
clap = "2.32.0"
regex = "1"
walkdir = "2.3"
fixedbitset = "0.4"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
logging_timer = "1"
